<resources>
    <string name="app_name">Sri Lanka Cricket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Official App of Sri Lanka Cricket</string>
    <string name="nav_header_subtitle">info@srilankacricket.lk</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_sort">Sort by</string>
    <string name="action_filter">Filter by</string>

    <string name="menu_home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live_webcast">Live Webcast</string>
    <string name="latest_news">Latest News</string>
    <string name="poling">Poling</string>
    <string name="rate_now">Rate Now</string>
    <string name="share_app_now">Share App Now</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="video_gallery">Video Gallery</string>
    <string name="contact_us">Contact Us</string>
    <string name="_94114722236">+94114722236</string>
    <string name="_94112895697">+94112895697</string>
    <string name="info_srilankancricket_lk">info@srilankancricket.lk</string>
    <string name="www_srilankancricket_lk">http://cricket.lk/</string>
    <string name="user_comments">Comments</string>
    <string name="user_share_string">Hi! Let me share this app with you !!</string>

    <string name="action_notifications">Notifications</string>
    <string name="sri_lanka_vs_new_zealand">Sri Lanka vs New Zealand</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">Map</string>


</resources>
