<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <include
        android:id="@+id/include2"
        layout="@layout/app_bar_main" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="92dp"
        android:text="@string/action_search" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="521dp"
        android:layout_alignBottom="@+id/include2"

        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="210dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="166dp"
                app:srcCompat="@mipmap/maxresdefault" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:text="Post match conference  NZvsENG  | ICC Cricket WorldCup 2019"
                android:textColor="#000000"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="173dp"
                app:srcCompat="@mipmap/maxresdefault2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="493dp"
                android:text="Englan lifts theworldcup after a thriller | ICC Cricket Worldcup 2019"
                android:textColor="#FA0F0E0E"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="144dp"
                app:srcCompat="@mipmap/sl" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="158dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="552dp"
        android:layout_marginEnd="231dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="231dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="138dp"
        android:text="@string/action_sort" />

    <Button
        android:id="@+id/button3"
        android:layout_width="158dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="553dp"
        android:layout_marginEnd="70dp"
        android:layout_marginLeft="183dp"
        android:layout_marginRight="70dp"
        android:layout_marginStart="183dp"
        android:layout_marginTop="136dp"
        android:text="@string/action_filter" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="592dp"
        android:layout_marginEnd="150dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="150dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="94dp"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:text="search here.."
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</RelativeLayout>